kubernetes/nodePort-services.yml
kind: Service
apiVersion: v1
metadata:
  name: cluster-http-mgmt
spec:
  ports:
  - port: 19999
    targetPort: akka-mgmt-http
  type: NodePort
  selector:
    app: dac

---
kind: Service
apiVersion: v1
metadata:
  name: dac-service
spec:
  ports:
  - port: 80
    targetPort: http
  type: NodePort
  selector:
    app: dac
